<?xml version="1.0" encoding="UTF-8"?>
<!--
  ~ Copyright (C) 2008-2022, Juick
  ~
  ~ This program is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as
  ~ published by the Free Software Foundation, either version 3 of the
  ~ License, or (at your option) any later version.
  ~
  ~ This program is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ along with this program.  If not, see <http://www.gnu.org/licenses/>.
  -->

<resources>
    <string name="Juick" translatable="false">Juick</string>
    <string name="default_notification_channel_id" translatable="false">default</string>
    <string name="notification_extra" translatable="false">message</string>
    <string name="context_menu">Context menu</string>
    <string name="Cancel">Cancel</string>
    <string name="Yes">Yes</string>
    <string name="Create">Create</string>
    <string name="Send">Send</string>
    <string name="crop">Crop</string>
    <string name="Error">Error</string>
    <string name="blog">blog</string>
    <string name="settings">Settings</string>
    <string name="blog_stats">%1$d posts</string>
    <string name="Share">Share</string>
    <string name="Replies">Replies</string>
    <string name="reply">Reply</string>
    <string name="recommend">Recommend</string>
    <string name="Enter_a_message">Enter a message</string>
    <string name="Message_posted">Message posted</string>
    <string name="Juick_profile">Juick profile</string>

    <string name="network_error">Network error</string>
    <string name="blacklist_error">User is in blacklist</string>
    
    <!-- MainActivity -->
    <string name="Subscriptions">My feed</string>
    <string name="Last_messages">Last</string>
    <string name="Me">Me</string>
    <string name="Top_messages">Top</string>
    <string name="With_photos">Photos</string>
    <string name="PMs">PMs</string>
    <string name="Discussions">Discussions</string>
    
    <!-- ExploreActivity -->
    <string name="Popular_tags">Popular tags</string>
    <string name="Discover">Discover</string>

    <!-- JuickMessageMenu -->
    <string name="Recommend_message">Recommend message</string>
    <string name="Subscribe_to">Subscribe to</string>
    <string name="add_to_ignore_list">Ignore</string>
    <string name="remove_from_ignore_list">Remove from ignore list</string>
    <string name="add_to_vip">Add user to VIP list</string>
    <string name="remove_from_vip">Remove user from VIP list</string>
    <string name="confirm_add_to_vip">Add to VIP?</string>
    <string name="confirm_remove_from_vip">Remove from VIP?</string>
    <string name="Recommended">Recommended</string>
    <string name="Subscribed">Subscribed</string>
    <string name="added_to_ignore_list">Added to ignore list</string>
    <string name="Are_you_sure_recommend">Are you sure you want to recommend?</string>
    <string name="Are_you_sure_subscribe">Are you sure you want to subscribe?</string>
    <string name="Are_you_sure_blacklist">Are you sure you want to blacklist?</string>

    <!-- NewMessageActivity -->
    <string name="New_message">New message</string>
    <string name="Attach">Attach</string>
    <string name="tags">Tags</string>

    <!-- SignIn / SignUp -->
    <string name="Nick_latin_letters_and_numbers_">Nick (latin letters and numbers):</string>
    <string name="Enter_nick_and_password">Enter nick and password</string>
    <string name="Unknown_nick_or_wrong_password">Unknown nick or wrong password</string>
    <string name="Only_one_account">You can use only one account at time</string>

    <!-- Preferences -->
    <string name="Password">Password</string>
    <string name="Notifications">Notifications</string>
    <string name="NotificationPublic">New public message</string>
    <string name="Appearance">Appearance</string>
    <string name="LoadPhotos">Load photos automatically</string>
    <string name="FontSize">Font size</string>

    <!-- Thread -->
    <string name="In_reply_to_">in reply to</string>
    <string name="post_not_found">Post not found</string>
    <string name="no_auth_message">Not authorized</string>
    <string name="wrong_image_format">Images of this format are not supported</string>
    <string name="DeleteComment">Delete comment</string>
    <string name="DeletePost">Delete post</string>
    <string name="Are_you_sure_delete">Are you sure delete message ?</string>
    <string name="Deleted">Deleted</string>

    <!-- Chats -->
    <string name="you_have_no_direct_messages">You have no direct messages</string>

    <string name="appCrash">Juick application crash</string>
    <string name="user_photo">User photo</string>
    <string name="attached_photo">Attached photo</string>
    <string name="attach_photo">Attach photo</string>
    <string name="send_button">Send button</string>
    <string name="tags_button">Tags button</string>
    <string name="logo">Logo</string>
    <string name="your_nickname">Your nickname</string>
    <string name="login">Login</string>
    <string name="divider">Divider</string>
    <string name="press_to_sign_in">Press to sign in</string>
    <string name="unread_discussions">You have unread discussions</string>
    <string name="juick_notifications">Juick notifications</string>

    <string name="lorem" translatable="false"><a href="https://google.com">Lorem Ipsum</a> is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</string>
    <string name="downloading_update">Downloading update…</string>
    <string name="search">Search</string>
    <string name="subscribed">Subscribed</string>
    <string name="subscribe">Subscribe</string>
    <string name="subscribe_to_comments">Subscribe to comments?</string>
    <string name="unsubscribe_from_comments">Unsubcribe from comments?</string>
    <string name="premium_badge">Premium badge</string>
    <string name="make_public">Make public</string>
    <string name="make_private">Make private</string>
    <string name="confirm_make_public">Make public?</string>
    <string name="confirm_make_private">Make private?</string>
    <string name="feed_new_messages">New messages</string>
    <string name="avatar_change">Edit</string>
    <string name="gallery">Gallery</string>
    <string name="camera">Camera</string>
    <string-array name="image_source_options">
        <item>@string/gallery</item>
        <item>@string/camera</item>
    </string-array>
</resources>
