<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (C) 2008-2021, Juick
  ~
  ~ This program is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as
  ~ published by the Free Software Foundation, either version 3 of the
  ~ License, or (at your option) any later version.
  ~
  ~ This program is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ along with this program.  If not, see <http://www.gnu.org/licenses/>.
  -->

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory android:title="@string/Notifications">
        <ListPreference
            android:key="notif_public"
            android:title="@string/NotificationPublic"
            android:entries="@array/prefsNotificationTypes"
            android:entryValues="@array/prefsNotificationTypesValues"
            android:defaultValue="3"
            android:persistent="true"/>
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/Appearance">
        <ListPreference
            android:key="fontsizesp"
            android:title="@string/FontSize"
            android:entries="@array/prefsFontSize"
            android:entryValues="@array/prefsFontSizeValues"
            android:defaultValue="16"
            android:persistent="true"/>
        <ListPreference
            android:key="loadphotos"
            android:title="@string/LoadPhotos"
            android:entries="@array/prefsLoadImages"
            android:entryValues="@array/prefsLoadImagesValues"
            android:defaultValue="Always"
            android:persistent="true"/>
<!--        <ListPreference
            android:key="theme"
            android:title="@string/Theme"
            android:entries="@array/prefsThemesTitles"
            android:entryValues="@array/prefsThemesValues"
            android:defaultValue="0"
            android:persistent="true"/>-->
    </PreferenceCategory>
</PreferenceScreen>