<?xml version="1.0" encoding="UTF-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical">

    <EditText
        android:id="@+id/editMessage"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="top"
        android:layout_weight="1"
        android:background="#00000000"
        android:padding="8dip"
        android:inputType="textCapSentences|textMultiLine"
        android:importantForAutofill="no"
        tools:targetApi="o" />

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0"
        android:padding="8dip">
        <ImageView
            android:id="@+id/buttonTags"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="5dp"
            android:layout_alignParentLeft="true"
            android:src="@drawable/ic_code_tags_black_24dp"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:padding="10dp"
            android:layout_alignParentStart="true"
            android:layout_marginEnd="5dp"
            android:contentDescription="@string/tags_button" />
        <ImageView
            android:id="@+id/buttonAttachment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/buttonTags"
            android:src="@drawable/ic_button_attachment"
            android:padding="10dp"
            android:layout_toEndOf="@id/buttonTags"
            android:contentDescription="@string/attach_photo" />
        <ImageView
            android:id="@+id/buttonSend"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_send_black_24dp"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:tint="@color/colorAccent"
            android:layout_alignParentRight="true"
            android:text="@string/Send"
            android:padding="10dp"
            android:layout_alignParentEnd="true"
            android:contentDescription="@string/send_button" />
    </RelativeLayout>

</LinearLayout>
