<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright (C) 2008-2024, Juick
  ~
  ~ This program is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as
  ~ published by the Free Software Foundation, either version 3 of the
  ~ License, or (at your option) any later version.
  ~
  ~ This program is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ along with this program.  If not, see <http://www.gnu.org/licenses/>.
  -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_weight="1"
    android:layout_marginVertical="@dimen/list_vertical_margin"
    android:background="@color/colorTextBackground"
    android:orientation="vertical">
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/colorBorder"
        android:contentDescription="@string/divider" />
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorTextBackground"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingBottom="@dimen/activity_vertical_margin">
        <ImageView
            android:id="@+id/user_picture"
            android:layout_width="@dimen/avatar_size"
            android:layout_height="@dimen/avatar_size"
            android:contentDescription="@string/user_photo"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:src="@drawable/av_96" />

        <TextView
            android:id="@+id/username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:textAppearance="@style/TextAppearance.Material3.TitleMedium"
            android:textColor="@color/colorPrimary"
            android:textIsSelectable="false"
            app:layout_constraintStart_toEndOf="@id/user_picture"
            app:layout_constraintTop_toTopOf="@id/user_picture"
            android:text="ugnich" />
        <ImageView
            android:id="@+id/premium_image_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_ei_star"
            app:layout_constraintStart_toEndOf="@id/username"
            app:layout_constraintTop_toTopOf="@id/username"
            android:visibility="gone"
            tools:visibility="visible"
            app:tint="@android:color/holo_green_dark"
            android:contentDescription="@string/premium_badge" />
        <TextView
            android:id="@+id/timestamp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="@style/TextAppearance.Material3.TitleSmall"
            android:textColor="@android:color/darker_gray"
            android:layout_marginTop="8dp"
            app:layout_constraintStart_toStartOf="@id/username"
            app:layout_constraintTop_toBottomOf="@id/username"
            android:text="11:11:11" />

        <TextView
            android:id="@+id/text"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:linksClickable="true"
            android:textAppearance="@style/TextAppearance.Material3.BodyMedium"
            android:textColor="@color/colorText"
            android:textColorLink="@color/colorDimmed"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/user_picture"
            app:layout_goneMarginTop="0dp"
            android:maxLines="4"
            android:text="@string/lorem"
            />
    </androidx.constraintlayout.widget.ConstraintLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/colorBorder"
        android:contentDescription="@string/divider" />
</LinearLayout>