<?xml version="1.0" encoding="UTF-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorPrimary"
    android:fitsSystemWindows="true"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="5dip">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:labelFor="@id/newNick">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/newNick"
                    android:layout_width="fill_parent"
                    android:layout_height="@dimen/avatar_size"
                    android:hint="@string/Nick_latin_letters_and_numbers_"
                    android:inputType="textPersonName"
                    android:singleLine="true"
                    android:autofillHints="username"
                    tools:targetApi="o" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:labelFor="@id/newPassword">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/newPassword"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/avatar_size"
                    android:hint="@string/Password"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:textColorHint="#cbcaca"
                    android:autofillHints="password"
                    tools:targetApi="o" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:labelFor="@id/confirmPassword">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/confirmPassword"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/avatar_size"
                    android:hint="Confirm password"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:textColorHint="#cbcaca"
                    android:autofillHints="password_new"
                    tools:targetApi="o" />
            </com.google.android.material.textfield.TextInputLayout>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/buttonCreate"
                android:layout_width="fill_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:background="@color/colorFunny"
                android:text="@string/Create"
                android:textColor="@color/white" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>
